# do_not_leave_animals

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  compose.override.dev.yaml  compose.override.yaml  compose.yaml  pyproject.toml  requirements.txt
apps/about/: apps.py  urls.py
apps/about/views/: index.py
apps/amimals_crm/: apps.py
apps/animals_crm/: admin.py  apps.py  forms.py  models.py  urls.py
apps/animals_crm/migrations/: 0001_initial.py  0002_alter_animalcard_name.py  0003_alter_animalcard_name.py  0004_animalcard_description_animalcomment.py  0005_alter_animalphoto_image.py
apps/animals_crm/models/: __init__.py  animal_card.py  animal_comment.py  animal_photo.py
apps/animals_crm/views/: __init__.py  animal_card.py  crm_index.py  delete_card.py  edit_card.py  new_card.py
apps/animals_feed/: apps.py  urls.py
apps/animals_feed/views/: __init__.py  card.py  feed.py
apps/blog/: forms.py  models.py  tasks.py  urls.py
apps/blog/migrations/: 0001_initial.py  0002_alter_post_date.py  0003_remove_post_author_alter_post_description.py  0004_post_photo_alter_post_title.py  0005_alter_post_date.py  0006_post_updated.py  0007_remove_post_updated.py  0008_alter_post_description.py  0009_alter_post_photo.py  0010_alter_post_photo.py  0011_alter_post_photo.py
apps/blog/views/: __init__.py  delete_post.py  edit_post.py  index.py  new_post.py  post_deleted.py
apps/helpers/: __init__.py  admin_login_required.py  get_page_obj.py
apps/home_page/: apps.py  urls.py
apps/home_page/views/: index.py
apps/static/css/: base.css
apps/templates/: base.html
apps/templates/about/: index.html
apps/templates/blog/: delete_post.html  edit_post.html  index.html  new_post.html  post_deleted.html
apps/templates/crm/: confirm_delete.html  crm.html  edit_card.html  (+1 more)
apps/users/: urls.py
core/: settings.py  urls.py
docker/app/: celery_worker_start.sh  init.sh  start.sh
(+21 files in other folders)
